# momentum-bot

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  README.ru.md  pyproject.toml
data/: AAVE_USDT_1d.parquet  ADA_USDT_1d.parquet  AVAX_USDT_1d.parquet  BNB_USDT_1d.parquet  BTC_USDT_1d.parquet  CHZ_USDT_1d.parquet  DASH_USDT_1d.parquet  DOGE_USDT_1d.parquet  ENJ_USDT_1d.parquet  ETH_USDT_1d.parquet  FET_USDT_1d.parquet  LINK_USDT_1d.parquet  LTC_USDT_1d.parquet  NEAR_USDT_1d.parquet  PAXG_USDT_1d.parquet  PEPE_USDT_1d.parquet  SOL_USDT_1d.parquet  TAO_USDT_1d.parquet  TRX_USDT_1d.parquet  XRP_USDT_1d.parquet  ZEC_USDT_1d.parquet
scripts/: backtest.py  momentum-bot.service  paper_selftest.py  scan.py  universe_refresh.py  variants_compare.py
src/momentum/: __init__.py  config.py  db.py  main.py  scheduler.py  sentinel.py  strategy.py  telegram_bot.py  trader.py
src/momentum_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_scheduler.py  test_strategy.py  test_telegram.py  test_trader.py
